2-ingress/deployment-alpine.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hostname-deployment
  labels:
    app: hostname-alpine
spec:
  minReadySeconds: 300
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate
  selector:
    matchLabels:
      app: hostname-alpine
  template:
    metadata:
      labels:
        app: hostname-alpine
    spec:
      containers:
      - name: hostname
        image: nu12/hostname:alpine
        ports:
        - containerPort: 3000
