2-ingress/service-alpine.yml
kind: Service
apiVersion: v1
metadata:
  name: alpine-service
spec:
  selector:
    app: hostname-alpine
  ports:
    - port: 3000
