2-ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-ingress
  annotations:
    ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: alpine.example.com
    http:
      paths:
        - path: /
          pathType: "Prefix"
          backend:
            service:
              name: alpine-service
              port: 
                number: 3000
  
  - http:
      paths:
        - path: /
          pathType: "Prefix"
          backend:
            service:
              name: latest-service
              port: 
                number: 3000
